--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TARGET=taiwan.osm.pbf
-GEOFABRIK_DOWNLOAD_URL=https://download.geofabrik.de/asia/taiwan-latest.osm.pbf
-POLY_FILE=resources/taiwan.poly
+TARGET=centro-oeste.osm.pbf
+GEOFABRIK_DOWNLOAD_URL=https://download.geofabrik.de/south-america/brazil/centro-oeste-latest.osm.pbf
+POLY_FILE=resources/centro-oeste.poly
 TILEMAKER_CONFIG=resources/config-openmaptiles.json
 TILEMAKER_PROCESS=resources/process-openmaptiles.lua
